link changed for NE past show, quotes changed on testimonials, quote and image removed from front page.

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Past Shows<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li class="dropdown-header">Recent Shows 2014 - 2016</li>
+                                <li class="dropdown-header">Recent Shows</li>
                                 <li role="separator" class="divider"></li>
                                 <li><a href="http://www.breakroomdowntown.com/" target = _blank>Topeka, KS - Breakroom</a></li>
                                 <li><a href="#">Kansas City, MO - Stanford and Sons, Kick Comedy Theater, Uptown Arts Bar</a></li>
                                 <li><a href="#">Lawrence, KS - Replay lounge, Jackpot Saloon, Jazzhaus, Oread</a></li>
                                 <li><a href="http://www.riley.army.mil/" target="_blank">Fort Riley, KS - Fort Riley Military Base</a></li>
-                                <li><a href="#">Omaha, NE - Bar</a></li>
+                                <li><a href="https://www.facebook.com/zoolarious/" target="_blank">Lincoln, NE - Zoolarious</a></li>
                                 <li><a href="http://www.livekuwait.com/" target="_blank">Kuwait City, Kuwait - The Live Theater, Bayt Lothan</a></li>
                                 <li><a href="http://shitholehq.com" target="_blank">Chicago, IL - The Shit Hole</a></li>
                                 <li><a href="http://drovers-dog.com/" target="_blank">Amsterdam, Netherlands - Drover’s Dog</a></li>
@@ -195,7 +195,7 @@
 
     <!-- START THE FEATURETTES -->
 
-    <hr class="featurette-divider">
+    <!-- <hr class="featurette-divider">
 
     <div class="row featurette">
         <div class="col-md-7">
@@ -207,7 +207,7 @@
         <div class="col-md-5">
             <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/natesmile.jpg" alt="Image of Nate smiling">
         </div>
-    </div>
+    </div> -->
 
     <hr class="featurette-divider">
 
@@ -215,10 +215,10 @@
         <div class="col-md-7 col-md-push-5">
             <h2 class="featurette-heading">Nate Eubanks</h2><h4><span class="text-muted"><a href="https://twitter.com/NateEubanks">@NateEubanks</a></span></h4>
             <p class="lead">Nate Eubanks grew up in rural Northeast Kansas and later worked internationally
-                in Paraguay and Kuwait. He has performed stand up comedy in eight countries (USA, Canada,
-                Kuwait, Qatar, Bahrain, South Africa, Netherlands, and Australia) and through the midwest
-                USA. From 5 star hotels in Qatar, art galleries in Johannesburg, garages in Chicago, and
-                finally clubs in Sydney, Nate brings the laughs to every audience.</p>
+                in Paraguay and Kuwait. He has performed stand up comedy in eight countries: Canada,
+                Kuwait, Qatar, Bahrain, South Africa, Netherlands, Australia and through the midwest
+                USA. From 5 star hotels in Qatar, art galleries in Johannesburg, garages in Chicago,
+                and finally clubs in Sydney, Nate brings the laughs to every audience.</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
             <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/head2.jpg" alt="Image of Nate frowning">
