--- a/testimonials.html
+++ b/testimonials.html
@@ -27,7 +27,7 @@
     <link href="jquery-gcal-flow-3.0.1/jquery.gcal_flow.css" rel="stylesheet" type="text/css">
 
     <style>
-        
+
     </style>
 </head>
 
@@ -61,13 +61,13 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Past Shows<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li class="dropdown-header">Recent Shows 2014 - 2016</li>
+                                <li class="dropdown-header">Recent Shows</li>
                                 <li role="separator" class="divider"></li>
                                 <li><a href="http://www.breakroomdowntown.com/" target = _blank>Topeka, KS - Breakroom</a></li>
                                 <li><a href="#">Kansas City, MO - Stanford and Sons, Kick Comedy Theater, Uptown Arts Bar</a></li>
                                 <li><a href="#">Lawrence, KS - Replay lounge, Jackpot Saloon, Jazzhaus, Oread</a></li>
                                 <li><a href="http://www.riley.army.mil/" target="_blank">Fort Riley, KS - Fort Riley Military Base</a></li>
-                                <li><a href="#">Omaha, NE - Bar</a></li>
+                                <li><a href="https://www.facebook.com/zoolarious/" target="_blank">Lincoln, NE - Zoolarious</a></li>
                                 <li><a href="http://www.livekuwait.com/" target="_blank">Kuwait City, Kuwait - The Live Theater, Bayt Lothan</a></li>
                                 <li><a href="http://shitholehq.com" target="_blank">Chicago, IL - The Shit Hole</a></li>
                                 <li><a href="http://drovers-dog.com/" target="_blank">Amsterdam, Netherlands - Drover’s Dog</a></li>
@@ -127,9 +127,10 @@
     <div class="row featurette">
         <div class="col-md-7">
             <h2 class="featurette-heading">Truly a funny dude</h2><h4><span class="text-muted"><a href="https://twitter.com/robkschulte">@robkschulte</a></span></h4>
-            <p class="lead">"I've seen Nate multiple times, and each time he finds a new way to make me laugh. I'm happy
-                to perform on the same stage with him, have him as a guest on the podcast, or just sit in the audience.
-                Truly a funny dude." - Rob Schulte</p>
+            <blockquote class="blockquote">
+                <p class="lead">"...each time he finds a new way to make me laugh...Truly a funny dude."</p>
+                <footer class="blockquote">Rob Schulte</footer>
+            </blockquote>
         </div>
         <div class="col-md-5">
             <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/head1.jpg" alt="Image of Nate smiling">
@@ -141,11 +142,11 @@
     <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
             <h2 class="featurette-heading">Nate Freakin' Eubanks</h2><h4><span class="text-muted"><a href="https://twitter.com/Pinklepus">@Pinklepus</a></span></h4>
-            <p class="lead">"Nate Eubanks is one of the funniest people I know. When you've been doing comedy for as
-                long as I have, you hear a lot of jokes. You want to know how funny Nate is? I think about one of Nate's
-                jokes at least once a week. You want proof? Nate asked me to help him with this website thing and with
-                full intention to help him, I totally forgot. Just straight up forgot. THEN I started thinking about cats,
-                and you know who has the best joke about cats? You bet your britches it's Nate freakin' Eubanks." - Tristan Newell</p>
+            <!-- <p class="lead">Nate Eubanks is one of the funniest people I know.</p> -->
+            <blockquote class="blockquote">
+                <p class="lead">Nate Eubanks is one of the funniest people I know.</p>
+                <footer class="blockquote-footer">Tristan Newell</footer>
+            </blockquote>
         </div>
         <div class="col-md-5 col-md-pull-7">
             <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/head2.jpg" alt="Image of Nate frowning">
