restored quotes to testimonials page, swapped out one headshot

--- a/testimonials.html
+++ b/testimonials.html
@@ -128,7 +128,9 @@
         <div class="col-md-7">
             <h2 class="featurette-heading">Truly a funny dude</h2><h4><span class="text-muted"><a href="https://twitter.com/robkschulte">@robkschulte</a></span></h4>
             <blockquote class="blockquote">
-                <p class="lead">"...each time he finds a new way to make me laugh...Truly a funny dude."</p>
+                <p class="lead">I've seen Nate multiple times, and each time he finds a new way to make me laugh. I'm happy
+                    to perform on the same stage with him, have him as a guest on the podcast, or just sit in the audience.
+                    Truly a funny dude.</p>
                 <footer class="blockquote">Rob Schulte</footer>
             </blockquote>
         </div>
@@ -142,14 +144,19 @@
     <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
             <h2 class="featurette-heading">Nate Freakin' Eubanks</h2><h4><span class="text-muted"><a href="https://twitter.com/Pinklepus">@Pinklepus</a></span></h4>
-            <!-- <p class="lead">Nate Eubanks is one of the funniest people I know.</p> -->
             <blockquote class="blockquote">
-                <p class="lead">Nate Eubanks is one of the funniest people I know.</p>
+                <p class="lead">Nate Eubanks is one of the funniest people I know. When you've been
+                    doing comedy for as long as I have, you hear a lot of jokes. You want to know how
+                    funny Nate is? I think about one of Nate's jokes at least once a week. You want
+                    proof? Nate asked me to help him with this website thing and with full intention
+                    to help him, I totally forgot. Just straight up forgot. THEN I started thinking
+                    about cats, and you know who has the best joke about cats? You bet your britches
+                    it's Nate freakin' Eubanks.</p>
                 <footer class="blockquote-footer">Tristan Newell</footer>
             </blockquote>
         </div>
         <div class="col-md-5 col-md-pull-7">
-            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/head2.jpg" alt="Image of Nate frowning">
+            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/head3.jpg" alt="Image of Nate frowning">
         </div>
     </div>
 
