carousel quotes changed

--- a/index.html
+++ b/index.html
@@ -132,8 +132,9 @@
             <div class="container">
                 <div class="carousel-caption">
                     <h1>@nateeubanks</h1>
-                    <p>"Took up stage time." - Bar, NE</p>
-                    <p><a class="btn btn-lg btn-primary" href="mailto:nathan.eubanks@gmail.com" role="button">Book me today</a></p>
+                    <p>...each time he finds a new way to make me laugh...Truly a funny dude.</p>
+                    <p>- Rob Schulte</p>
+                    <p><a class="btn btn-lg btn-primary" href="mailto:nathan.eubanks@gmail.com" role="button">Book Nate today</a></p>
                 </div>
             </div>
         </div>
@@ -141,9 +142,8 @@
             <img class="second-slide" src="images/natetalk.jpg" alt="Nate talking into mic">
             <div class="container">
                 <div class="carousel-caption">
-                    <h1>"I though he was going to play the guitar.  Instead he told jokes."</h1>
-                    <p>- Paris Hostel Guest (probably an Australian)</p>
-                    <!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>-->
+                    <h1>Nate Eubanks is one of the funniest people I know.</h1>
+                    <p>- Tristan Newell</p>
                 </div>
             </div>
         </div>
@@ -151,7 +151,7 @@
             <img class="third-slide" src="images/natemic.jpg" alt="Nate with crazy hair on stage">
             <div class="container">
                 <div class="carousel-caption">
-                    <h1>"Well over 100 twitter followers."</h1>
+                    <h1>Well over 100 twitter followers.</h1>
                     <p>- Everyone</p>
                     <p><a class="btn btn-lg btn-primary" href="https://drive.google.com/folderview?id=0BzgqfV9PL27hMTR6NTdqRzFiMlE&usp=sharing"
                           target='_blank' role="button">Browse gallery</a></p>
