fixed html markup errors

--- a/index.html
+++ b/index.html
@@ -60,12 +60,13 @@
                                 <li><a href="mailto:nathan.eubanks@gmail.com">nathan.eubanks@gmail.com</a></li>
                                 <li><a href="https://twitter.com/NateEubanks" target="_blank">@NateEubanks</a></li>
                             </ul>
+                        </li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Past Shows<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li class="dropdown-header">Recent Shows</li>
                                 <li role="separator" class="divider"></li>
-                                <li><a href="http://www.breakroomdowntown.com/" target = _blank>Topeka, KS - Breakroom</a></li>
+                                <li><a href="http://www.breakroomdowntown.com/" target = "_blank">Topeka, KS - Breakroom</a></li>
                                 <li><a href="#">Kansas City, MO - Stanford and Sons, Kick Comedy Theater, Uptown Arts Bar</a></li>
                                 <li><a href="#">Lawrence, KS - Replay lounge, Jackpot Saloon, Jazzhaus, Oread</a></li>
                                 <li><a href="http://www.riley.army.mil/" target="_blank">Fort Riley, KS - Fort Riley Military Base</a></li>
@@ -77,7 +78,7 @@
                                 <li><a href="#">Johannesburg, South Africa - The Box a Goliath and Goliath Production</a></li>
                                 <li><a href="#">Paris, France - A terrible hostel open mic</a></li>
                                 <li><a href="http://www.stregisdoha.com/" target="_blank">Doha, Qatar - Jazz at the Lincoln Center at St. Regis</a></li>
-                                <li><a href="http://thedomainhotels.com/restaurant_1/txoko.en.html" target = _blank>Manama, Bahrain - Txoko Lounge</a></li>
+                                <li><a href="http://thedomainhotels.com/restaurant_1/txoko.en.html" target = "_blank">Manama, Bahrain - Txoko Lounge</a></li>
                                 <li role="separator" class="divider"></li>
                             </ul>
                         </li>
@@ -154,7 +155,7 @@
                     <h1>Well over 100 twitter followers.</h1>
                     <p>- Everyone</p>
                     <p><a class="btn btn-lg btn-primary" href="https://drive.google.com/folderview?id=0BzgqfV9PL27hMTR6NTdqRzFiMlE&usp=sharing"
-                          target='_blank' role="button">Browse gallery</a></p>
+                          target="_blank" role="button">Browse gallery</a></p>
                 </div>
             </div>
         </div>
