added rob schulte credits

--- a/testimonials.html
+++ b/testimonials.html
@@ -132,7 +132,9 @@
                 <p class="lead">I've seen Nate multiple times, and each time he finds a new way to make me laugh. I'm happy
                     to perform on the same stage with him, have him as a guest on the podcast, or just sit in the audience.
                     Truly a funny dude.</p>
-                <footer class="blockquote">Rob Schulte</footer>
+                <p>Rob Schulte<br  /> <small>Executive Producer <cite>Doin' It with Mike Sacks... and
+                    Rob</cite></small><small>Audio Producer <cite>Can't Sleep</cite></small><small>Producer <cite>Mr
+                    Corpo</cite> podcast</small></p>
             </blockquote>
         </div>
         <div class="col-md-5">
