testimonials nav changed to 'reviews'; reviews modified/extended; title changed

--- a/testimonials.html
+++ b/testimonials.html
@@ -9,12 +9,13 @@
     <meta name="author" content="Brian Thomas">
     <link rel="icon" href="https://cdn0.iconfinder.com/data/icons/masks-and-conspiracy/262/34-512.png">
 
-    <title>Nathan Eubanks - Comedian?</title>
+    <title>Nathan Eubanks - Comedian</title>
 
     <!-- Bootstrap core CSS -->
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
+    ==================================================================================-->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -50,7 +51,7 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Testimonials</a></li>
+                        <li class="active"><a href="#">Reviews</a></li>
                         <li><a href="https://www.youtube.com/watch?v=qdFZyUNPiyQ" target="_blank">YouTube</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contact<span class="caret"></span></a>
@@ -121,8 +122,6 @@
 
 <div class="container marketing">
 
-    <!-- START THE FEATURETTES -->
-
     <hr class="featurette-divider">
 
     <div class="row featurette">
@@ -138,7 +137,7 @@
             </blockquote>
         </div>
         <div class="col-md-5">
-            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/head1.jpg" alt="Image of Nate smiling">
+            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/robs.jpg" alt="Image of Nate smiling">
         </div>
     </div>
 
@@ -146,7 +145,7 @@
 
     <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-            <h2 class="featurette-heading">Nate Freakin' Eubanks</h2><h4><span class="text-muted"><a href="https://twitter.com/Pinklepus">@Pinklepus</a></span></h4>
+            <h2 class="featurette-heading">Nate Freakin' Eubanks</h2><h4><span class="text-muted"><a href="https://twitter.com/Pinklepus" target="_blank">@Pinklepus</a></span></h4>
             <blockquote class="blockquote">
                 <p class="lead">Nate Eubanks is one of the funniest people I know. When you've been
                     doing comedy for as long as I have, you hear a lot of jokes. You want to know how
@@ -155,31 +154,48 @@
                     to help him, I totally forgot. Just straight up forgot. THEN I started thinking
                     about cats, and you know who has the best joke about cats? You bet your britches
                     it's Nate freakin' Eubanks.</p>
-                <footer class="blockquote-footer">Tristan Newell</footer>
+                <p>Tristan Newell</p><small>Debate League Stand-Up National Champion</small>
+                <small>Producer <cite>Big Hot Bits</cite></small><small>Featured for <cite>Kyle Kinane</cite></small>
+                <small>Appeared in nationally touring shows <cite>7 Minutes in Purgatory</cite> and
+                    <cite>Underwear Comedy Party</cite></small><small>Kansas City Improv</small>
             </blockquote>
         </div>
         <div class="col-md-5 col-md-pull-7">
-            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/head3.jpg" alt="Image of Nate frowning">
+            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/tristen.jpg" alt="Image of Nate frowning">
         </div>
     </div>
 
     <hr class="featurette-divider">
 
-    <!--<div class="row featurette">-->
-        <!--<div class="col-md-7">-->
-            <!--<h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>-->
-            <!--<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-            euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>-->
-        <!--</div>-->
-        <!--<div class="col-md-5">-->
-            <!--<img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto"
-            src="images/natesmile.jpg" alt="Generic placeholder image">-->
-        <!--</div>-->
-    <!--</div>-->
+    <div class="row featurette">
+        <div class="col-md-7">
+            <h2 class="featurette-heading">He’s going to kill it</h2>
+            <h4><span class="text-muted">
+                <a href="https://twitter.com/mattkecksucks" target="_blank">@mattkecksucks</a>
+                </span>
+            </h4>
+            <blockquote class="blockquote">
+                <p class="lead">Nate is one of the most versatile performers we’ve ever had on our
+                    show. He’s done standup, our roast battle, and helped by writing and performing
+                    sketches. He’s the type of comic I love to book, because I know he’s is going to
+                    perform well no matter what crazy thing I ask him to do. I can put him on a show
+                    and not have to worry about that part, because I know he’s going to kill it.
+                </p>
+                <p>Matt Keck</p><small>Appearances on <cite>Tosh.0</cite>, <cite>Web Soup</cite> and
+                    <cite>Ridiculousness</cite> for his YouTube videos, which have amassed over 30
+                    million views.</small>
+            </blockquote>
+        </div>
+        <div class="col-md-5">
+            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto"
+            src="images/matt-keck.jpg" alt="Generic placeholder image">
+        </div>
+    </div>
 
-    <!--<hr class="featurette-divider">-->
+    <hr class="featurette-divider">
 
-    <!-- /END THE FEATURETTES -->
+    <!-- /END THE FEATURETTES
+    ================================================-->
 
 
     <!-- FOOTER -->
@@ -198,7 +214,7 @@
 
 <!-- gCalFlow
 ================================================== -->
-<script>_gCalFlow_debug = true;</script>
+<script>_gCalFlow_debug = false;</script>
 <script type="text/javascript" src="jquery-gcal-flow-3.0.1/jquery.gcal_flow.js"></script>
 
 <script type="text/javascript">
@@ -214,7 +230,9 @@
     });
 </script>
 
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug
+    =====================================================-->
 <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+
 </body>
 </html>
