--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Brian Thomas">
     <link rel="icon" href="https://cdn0.iconfinder.com/data/icons/masks-and-conspiracy/262/34-512.png">
 
-    <title>Nathan Eubanks - Comedian?</title>
+    <title>Nathan Eubanks - Comedian</title>
 
     <!-- Bootstrap core CSS -->
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -52,7 +52,7 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="testimonials.html">Testimonials</a></li>
+                        <li><a href="testimonials.html">Reviews</a></li>
                         <li><a href="https://www.youtube.com/watch?v=qdFZyUNPiyQ" target="_blank">YouTube</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contact<span class="caret"></span></a>
