changed title and img alts

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Brian Thomas">
     <link rel="icon" href="https://cdn0.iconfinder.com/data/icons/masks-and-conspiracy/262/34-512.png">
 
-    <title>Nathan Eubanks - Comedian</title>
+    <title>Nate Eubanks - Comedian</title>
 
     <!-- Bootstrap core CSS -->
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -222,7 +222,7 @@
                 and finally clubs in Sydney, Nate brings the laughs to every audience.</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/head2.jpg" alt="Image of Nate frowning">
+            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/head2.jpg" alt="Image of Nate">
         </div>
     </div>
 
