--- a/testimonials.html
+++ b/testimonials.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Brian Thomas">
     <link rel="icon" href="https://cdn0.iconfinder.com/data/icons/masks-and-conspiracy/262/34-512.png">
 
-    <title>Nathan Eubanks - Comedian</title>
+    <title>Nate Eubanks - Comedian</title>
 
     <!-- Bootstrap core CSS -->
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -137,7 +137,7 @@
             </blockquote>
         </div>
         <div class="col-md-5">
-            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/robs.jpg" alt="Image of Nate smiling">
+            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/robs.jpg" alt="Image of Rob Schulte">
         </div>
     </div>
 
@@ -161,7 +161,7 @@
             </blockquote>
         </div>
         <div class="col-md-5 col-md-pull-7">
-            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/tristen.jpg" alt="Image of Nate frowning">
+            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/tristen.jpg" alt="Image of Tristan Newell">
         </div>
     </div>
 
@@ -188,7 +188,7 @@
         </div>
         <div class="col-md-5">
             <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto"
-            src="images/matt-keck.jpg" alt="Generic placeholder image">
+            src="images/matt-keck.jpg" alt="Image of Matt Keck">
         </div>
     </div>
 
