--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand active" href="/">Nathan Eubanks</a>
+                    <a class="navbar-brand active" href="/">Nate Eubanks</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
