--- a/testimonials.html
+++ b/testimonials.html
@@ -194,6 +194,32 @@
 
     <hr class="featurette-divider">
 
+        <div class="row featurette">
+            <div class="col-md-7 col-md-push-5">
+                <h2 class="featurette-heading">Loved his style</h2><h4><span class="text-muted"><a href="https://twitter.com/AliFingerz" target="_blank">@AliFingerz</a></span></h4>
+                <blockquote class="blockquote">
+                    <p class="lead">It was an absolute pleasure to meet and share the stage with Nate
+                        in Doha, Qatar. I had heard of him from a comedian friend of mine in Kuwait
+                        and watching him work was an eye-opener. His versatile material hits you with
+                        the subtlety of a bat. I was happy to book him on my show in Bahrain shortly
+                        after. The crowd loved his style and the contrast between him and other comedians
+                        in the GCC. I'm more than confident that we will share the stage and laugh together
+                        again and I hope that happens sooner rather than later...in whatever part of
+                        the world that may be.</p>
+                    <p>Ali Fingerz</p>
+                    <small>Host of <cite>Bahrain For All, Run DMC and Bumblefoot of Guns n Roses</cite></small>
+                    <small>Presenter for <cite>TED Talk</cite></small>
+                    <small>Stand up comedy (Kuwait, Qatar, Oman, and Saudi Arabia), instagram Mitsfitz.Comedy
+                        (tens of thousands of views), writer, film actor, cartoon voiceover actor</small>
+                </blockquote>
+            </div>
+            <div class="col-md-5 col-md-pull-7">
+                <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/ali-fingerz.jpg" alt="Image of Ali Fingerz">
+            </div>
+        </div>
+
+        <hr class="featurette-divider">
+
     <!-- /END THE FEATURETTES
     ================================================-->
 
