--- a/testimonials.html
+++ b/testimonials.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Nathan Eubanks Promotional Website">
+    <meta name="description" content="Nate Eubanks Standup Comedy">
     <meta name="author" content="Brian Thomas">
     <link rel="icon" href="https://cdn0.iconfinder.com/data/icons/masks-and-conspiracy/262/34-512.png">
 
