--- a/testimonials.html
+++ b/testimonials.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Nate Eubanks Standup Comedy">
     <meta name="author" content="Brian Thomas">
-    <link rel="icon" href="https://cdn0.iconfinder.com/data/icons/masks-and-conspiracy/262/34-512.png">
+    <link rel="icon" href="favicon.png">
 
     <title>Nate Eubanks - Comedian</title>
 
@@ -258,7 +258,9 @@
 
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug
     =====================================================-->
-<script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+<!--[if lt IE 10]>
+    <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+<![endif]-->
 
 </body>
 </html>
