changed from cdn to local for css and js

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- Stylesheets
     =============================================================================================-->
-    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
     <link href="fade.css" rel="stylesheet" />
     <!-- <link href="css/style_v1.css" rel="stylesheet" /> -->
@@ -258,8 +258,8 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
 <!-- gCalFlow
 ================================================== -->
@@ -291,7 +291,11 @@
     }
 </script> -->
 
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug
+=======================================================================-->
+<!--[if lt IE 10]>
+    <script src="js/ie10-viewport-bug-workaround.js"></script>
+<![endif]-->
+
 </body>
 </html>
