--- a/testimonials.html
+++ b/testimonials.html
@@ -12,7 +12,7 @@
     <title>Nate Eubanks - Comedian</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
     ==================================================================================-->
@@ -235,8 +235,8 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
 <!-- gCalFlow
 ================================================== -->
@@ -259,7 +259,7 @@
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug
     =====================================================-->
 <!--[if lt IE 10]>
-    <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="js/ie10-viewport-bug-workaround.js"></script>
 <![endif]-->
 
 </body>
