--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="testimonials">Reviews</a></li>
+                    <li><a href="reviews">Reviews</a></li>
                     <li><a href="https://www.youtube.com/watch?v=qdFZyUNPiyQ" target="_blank">YouTube</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contact<span class="caret"></span></a>
