--- a/reviews.html
+++ b/reviews.html
@@ -27,9 +27,17 @@
     <!-- gCalFlow -->
     <link href="jquery-gcal-flow-3.0.1/jquery.gcal_flow.css" rel="stylesheet" type="text/css">
 
-    <style>
+    <!-- Google Analytics
+    =============================================================================================-->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-    </style>
+      ga('create', 'UA-90104218-2', 'auto');
+      ga('send', 'pageview');
+    </script>
 </head>
 
 <!-- NAVBAR
