fixed footer url

--- a/reviews.html
+++ b/reviews.html
@@ -234,7 +234,7 @@
 
     <!-- FOOTER -->
     <footer class="footer">
-        <p><a href="http://www.moneykatz.com/contact.html">&copy; 2017 Brian Thomas &middot;</a>
+        <p><a href="http://www.moneykatz.com/contact">&copy; 2017 Brian Thomas &middot;</a>
             <span class="pull-right"><a href="#">Back to top</a></span></p>
     </footer>
 
