changed footer link

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
     <!-- Stylesheets
     =============================================================================================-->
     <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link href="style.css" rel="stylesheet" />
-    <link href="fade.css" rel="stylesheet" />
-    <!-- <link href="css/style_v1.css" rel="stylesheet" /> -->
+    <link href="css/style.css" rel="stylesheet" />
+    <link href="css/fade.css" rel="stylesheet" />
 
     <!-- gCalFlow -->
     <link href="jquery-gcal-flow-3.0.1/jquery.gcal_flow.css" rel="stylesheet" type="text/css">
@@ -43,9 +42,9 @@
     </script>
 </head>
 
+<body>
 <!-- NAVBAR
 ================================================== -->
-<body>
     <nav class="navbar navbar-inverse navbar-static-top">
         <div class="container">
             <div class="navbar-header">
@@ -121,7 +120,7 @@
         </div>
     </nav>
 
-<!-- Carousel
+<!-- Carousel (images are specified in fade.css)
 ================================================== -->
 <div class="carousel fade-carousel slide carousel-fade" data-ride="carousel" data-interval="5000" id="bs-carousel">
   <!-- Overlay -->
@@ -254,7 +253,7 @@
 
     <!-- FOOTER -->
     <footer class="footer">
-        <p><a href="http://www.moneykatz.com/contact">&copy; 2017 Brian Thomas &middot;</a>
+        <p><a href="http://18.220.25.115/">&copy; 2017 Brian Thomas &middot;</a>
             <span class="pull-right"><a href="#">Back to top</a></span></p>
     </footer>
 
