--- a/reviews.html
+++ b/reviews.html
@@ -158,7 +158,7 @@
                 </blockquote>
             </div>
             <div class="col-md-5 col-md-pull-7">
-                <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/Sean-Morahan.jpg" alt="Image of Tristan Newell">
+                <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/seanMorahan.jpg" alt="Image of Tristan Newell">
             </div>
         </div>
 
